plugins/devkit/devkit-kotlin-tests/testData/inspections/listenerImplementationMustNotBeDisposable/DisposableListenerDeepInheritance.kt
import com.intellij.openapi.Disposable

interface MyDisposable : Disposable

class <error descr="Listener implementation must not implement 'Disposable'">MyProjectListener</error> : BaseListenerInterface, MyDisposable